--- a/meddi_app/package.json
+++ b/meddi_app/package.json
@@ -16,24 +16,24 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@formatjs/intl-displaynames": "^6.8.5",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@tanstack/react-query": "^5.61.5",
     "axios": "^1.7.8",
     "expo": "~52.0.11",
     "expo-blur": "~14.0.1",
+    "expo-camera": "^16.0.7",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.9",
     "expo-secure-store": "^14.0.0",
-    "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
+    "jwt-decode": "^4.0.0",
     "libphonenumber-js": "^1.11.15",
     "react": "18.3.1",
     "react-dom": "18.3.1",
