chore: Ran prebuild to generate iOS files

--- a/meddi_app/app.json
+++ b/meddi_app/app.json
@@ -9,13 +9,19 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.meddi-app"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO"
+      ],
+      "package": "com.anonymous.meddi_app"
     },
     "web": {
       "bundler": "metro",
@@ -24,7 +30,6 @@
     },
     "plugins": [
       "expo-router",
-
       [
         "expo-camera",
         {
