chore: Passed iOS test with real device

--- a/meddi_app/android/app/src/main/AndroidManifest.xml
+++ b/meddi_app/android/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="myapp"/>
         <data android:scheme="com.anonymous.meddi_app"/>
+        <data android:scheme="exp+meddiapp"/>
       </intent-filter>
     </activity>
   </application>
