--- a/meddi_app/ios/meddiapp/Info.plist
+++ b/meddi_app/ios/meddiapp/Info.plist
@@ -31,6 +31,12 @@
           <string>com.anonymous.meddi-app</string>
         </array>
       </dict>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>exp+meddiapp</string>
+        </array>
+      </dict>
     </array>
     <key>CFBundleVersion</key>
     <string>1</string>
