--- a/meddi_app/package.json
+++ b/meddi_app/package.json
@@ -24,6 +24,7 @@
     "expo-blur": "~14.0.1",
     "expo-camera": "^16.0.7",
     "expo-constants": "~17.0.3",
+    "expo-dev-client": "^5.0.4",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
@@ -40,7 +41,6 @@
     "react-hook-form": "^7.53.2",
     "react-native": "0.76.3",
     "react-native-bouncy-checkbox": "^4.1.2",
-    "react-native-gesture-handler": "~2.20.2",
     "react-native-mask-input": "^1.2.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
